5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4485/executions/1635_2704.log
== TEST (2019-04-10 13:38:11) 
-- CODE:
x= float(input(""))
y= input("S/N")
if(y=="S")
   m= x+((10/100)*x)
else:
	m= x
print(m)
-- ERROR:
File "XXXX", line 3
    if(y=="S")
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:38:25) 
-- CODE:
x= float(input(""))
y= input("S/N")
if(y =="S")
   m= x+((10/100)*x)
else:
	m= x
print(m)
-- ERROR:
File "XXXX", line 3
    if(y =="S")
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:39:05) 
-- CODE:
x= float(input(""))
y= input("S/N")
if(x>="S")
   m= x+((10/100)*x)
else:
	m= x
print(m)
-- ERROR:
File "XXXX", line 3
    if(x>="S")
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:40:50) 
-- CODE:
x= float(input(""))
y= input("S/N")
if(y=="S"):
   m= x+((10/100)*x)
else:
	m= x
print(m)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 13:40:59) 
-- CODE:
x= float(input(""))
y= input("S/N")
if(y=="S"):
   m= x+((10/100)*x)
else:
	m= x
print(m)
-- EXECUTION TIME:
0.179692
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:41:16) 
-- CODE:
x= float(input(""))
y= input("S/N")
if(y=="S"):
   m= x+((10/100)*x)
else:
	m= x
print(m)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 13:41:24) 
-- CODE:
x= float(input(""))
y= input("S/N")
if(y=="S"):
   m= x+((10/100)*x)
else:
	m= x
print(m)
-- EXECUTION TIME:
0.142015
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
